--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,17 @@
 }
 .menu a {
     color: #fff;
+    text-decoration: none;
 }
 .navbar {
     display: flex;
     justify-content: space-between;
+}
+.menu li {
+    list-style: none;
+}
+.menu {
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
 }
