Modifique el css

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,11 @@
     color: #191c32;
     transition: ease-in 0.4s;
 }
+.main {
+    margin:  0 auto;
+    width: 80vw;
+    height: 80vh;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+}
