--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,7 @@ span {
     cursor: pointer;
     box-shadow:  0px 0px 10px aqua;
 }
+.descargar-cv:hover {
+    background-color: white;
+    box-shadow: none;
+}
