--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ span {
     height: 4px;
     background-color: aqua;
     margin-top: 10px;
-    margin-bottom: 2.5em;
+    margin-bottom: 2.5em;""
 }
 
 body {
